# designOptimization

./: CMakeLists.txt
anat/: idObjectif.txt
anat/minipig/: demi_cranecoupe_droit_cranio_centered_resimplified.stl  demi_cranecoupe_droit_cranio_centered_simplified.stl
parameters/: parameters.csv  parametersMaison.csv  parametersMaison2.csv
src/: Draw.cpp  Draw.hpp  PSO.cpp  PSO.hpp  Target.h  Workspace.cpp  Workspace.h  optiDesign.cpp  tools.cpp  tools.hpp  useKdTree.cpp  useKdTree.hpp  utils.cpp  utils.h
